# Biovision

./: .env.example  .gitignore  Integration_Test_Plan.md  README.md  amplify.yml  beaver_results_batch.csv  beaver_results_local.csv  beaver_results_s3.csv  beaver_single.csv  beaveragent (1).ipynb  package.json  pyproject.toml  run_animal_count.py  run_animal_csv.py
amplify/: backend.ts  package-lock.json  package.json  resource.d.ts  tsconfig.json
amplify/functions/beaver-api/: handler.mjs  index.cjs  package-lock.json  package.json  resource.js
amplify/functions/beaver-api/lib/: classify.js  jobsDb.js
ocr_debug/: ocr_crop_1.txt  ocr_crop_2.txt  ocr_crop_4.txt
src/beaver_id/: __init__.py  cli.py  gradio_app.py
tests/: test_cli.py
web/: next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  page.tsx
web/src/app/api/beaver/run/: route.ts
web/src/app/api/chat/: route.ts
web/src/app/api/classify/: route.ts
web/src/app/api/jobs/: route.ts
web/src/app/api/jobs/[id]/: route.ts
web/src/app/api/jobs/[id]/csv/: route.ts
web/src/components/app/workspace/: UploadSection.tsx
web/src/components/ui/: chart.tsx
web/src/hooks/: useDetectionJob.ts
web/src/lib/: animalPostProcess.js  animalPostProcess.test.mjs  beaverApiBase.ts  classify.ts  jobsDb.ts
web/src/pages/: NotFound.tsx
web/src/types/: detection.ts
